--- a/presentation/src/main/res/layout/activity_login.xml
+++ b/presentation/src/main/res/layout/activity_login.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.andres.comics.main.MainActivity"
-    android:id="@+id/flt_main">
+    tools:context="com.andres.comics.login.LoginActivity"
+    android:id="@+id/flt_login">
 
 
 </FrameLayout>
